fix some build warnings